[tool.poetry]
name = "dm-payments"
version = "0.1.0"
description = ""
authors = ["mmackowsky <maciostah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.0"
fastapi = {extras = ["all"], version = "^0.110.2"}
uvicorn = "^0.29.0"
stripe = "^9.3.0"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
